# EchoApp

./: AUTONOMOUS_IMPLEMENTATION_REPORT.md  BUILD_OUTLINE.md  BUILD_STATUS-BlackDragon.md  BUILD_STATUS.md  EchoPro.spec  EchoPro_Portable.bat  PHASE_0_COMPLETE.md  PHASE_1_TO_5_KNOWN_ISSUES_TODO.md  PHASE_5A_RECORDING_PLAN.md  PHASE_5B_RECORDING_PLAN.md  PHASE_5B_TASK_CHECKLIST.md  app_paths.py  audio_device.py  audio_engine.py  audio_info.py  audioinfo.py  build_exe.bat  echo-v0.1.md  echo_pro_app-BlackDragon.py  echo_pro_app.py  echo_pro_installer.iss  first_run.py  input_validation.py  install_echo_pro.bat  metronome.py  music_generator.py  p5a_regression_runner.py  p5b_regression_runner.py  playback_mixer.py  plugin_system.py  project_model.py  recording_controller.py  recording_recovery.py  recording_session.py  recording_ui_components.py  restore_seed_wrappers.ps1  run_p5a_checks.bat  song_planner.py  stems_engine.py  t2m_interface.py  (+7 more)
seeds/ACE-Step-1.5-main/acestep/: acestep_v15_pipeline.py  audio_utils.py  audio_utils_test.py
seeds/ACE-Step-1.5-main/acestep/api/: train_api_dataset_auto_label_async_route.py
seeds/Retrieval-based-Voice-Conversion-WebUI-main/: go-webui.bat  realtime_gui.py
seeds/Retrieval-based-Voice-Conversion-WebUI-main/Retrieval-based-Voice-Conversion-WebUI-main/: go-realtime_gui.bat
seeds/Retrieval-based-Voice-Conversion-WebUI-main/Retrieval-based-Voice-Conversion-WebUI-main/infer/: audio.py  hubert.py
seeds/Retrieval-based-Voice-Conversion-WebUI-main/infer/: rmvpe.py
seeds/Retrieval-based-Voice-Conversion-WebUI-main/train/: mel_processing.py  utils.py
seeds/demucs-main/: .gitignore  README.md  mypy.ini  pyproject.toml  setup.cfg
seeds/demucs-main/.github/workflows/: linter.yml  tests.yml
seeds/demucs-main/demucs/: api.py  audio.py  demucs.py  hdemucs.py  hf.py  htdemucs.py  pretrained.py  repo.py  solver.py  train.py  utils.py  wav.py
seeds/demucs-main/demucs-main/: Makefile  hubconf.py
seeds/demucs-main/demucs-main/demucs/: __init__.py  apply.py  separate.py  states.py  wiener.py
seeds/demucs-main/demucs-main/docs/: training.md
seeds/demucs-main/demucs-main/tools/: bench.py
seeds/demucs-main/docs/: linux.md  mac.md  mdx.md  release.md  windows.md
seeds/demucs-main/tools/: export_hf.py
(+25 files in other folders)
